--- a/mipokemons/src/styles/pokemonList.module.css
+++ b/mipokemons/src/styles/pokemonList.module.css
@@ -7,3 +7,17 @@
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (max-width: 950px) {
+    .container{
+      grid-template-columns: repeat(2, 1fr);
+      gap: 15px;
+    }
+  }
+  
+  @media screen and (max-width: 650px) {
+    .container{
+      grid-template-columns: 1fr;
+      gap: 15px;
+    }
+  }
